@@ -2,6 +2,8 @@
 v6.2.5-git
 ----------
 
+[mms] Only count successful compose mails when determining recipient limits
+      (Bug #13751).
 
 
 ------
